k8s/dev/backend-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-dev
  namespace: mlops
  labels:
    app: mlops-dev
    env: dev
spec:
  selector:
    app: mlops-dev
  ports:
    - protocol: TCP
      port: 6080
      targetPort: 6080
  type: ClusterIP
